BusOne/src/objects/Data_Map_Template_Field_vod__c.object
<CustomObject>
    <description>The Data Map Template Field object stores the column number to VoD field mappings for a specific Data Map Template.</description>
    <fields>
        <fullName>Column_Number_vod__c</fullName>
        <description>Column Number of the data file that will be loaded for the column mapping.  This should be from 1 to the number of columns in the file.</description>
        <label>Column Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Map_Template_vod__c</fullName>
        <description>Data Map Template is the Parent reference for the Data Map Template Field mapping.</description>
        <label>Data Map Template</label>
        <referenceTo>Data_Map_Template_vod__c</referenceTo>
        <relationshipLabel>Data Map Template Fields</relationshipLabel>
        <relationshipName>Data_Map_Template_Field_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vod_Field_vod__c</fullName>
        <description>Vod Field is a picklist of the Vod Fields contained within the VoD database.  This picklist as well as the values contained within the picklist should not be modified.</description>
        <label>Vod Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Id_vod__c</fullName>
                </value>
                <value>
                    <fullName>Child_ID_vod__c</fullName>
                </value>
                <value>
                    <fullName>Product_Group_vod__c</fullName>
                </value>
                <value>
                    <fullName>Market_vod__c</fullName>
                </value>
                <value>
                    <fullName>Brick_vod__c</fullName>
                </value>
                <value>
                    <fullName>Payer_Id_vod__c</fullName>
                </value>
                <value>
                    <fullName>Data_Channel_vod__c</fullName>
                </value>
                <value>
                    <fullName>B1_vod__c</fullName>
                </value>
                <value>
                    <fullName>B2_vod__c</fullName>
                </value>
                <value>
                    <fullName>B3_vod__c</fullName>
                </value>
                <value>
                    <fullName>B4_vod__c</fullName>
                </value>
                <value>
                    <fullName>B5_vod__c</fullName>
                </value>
                <value>
                    <fullName>B6_vod__c</fullName>
                </value>
                <value>
                    <fullName>B7_vod__c</fullName>
                </value>
                <value>
                    <fullName>B8_vod__c</fullName>
                </value>
                <value>
                    <fullName>B9_vod__c</fullName>
                </value>
                <value>
                    <fullName>B10_vod__c</fullName>
                </value>
                <value>
                    <fullName>B11_vod__c</fullName>
                </value>
                <value>
                    <fullName>B12_vod__c</fullName>
                </value>
                <value>
                    <fullName>B13_vod__c</fullName>
                </value>
                <value>
                    <fullName>B14_vod__c</fullName>
                </value>
                <value>
                    <fullName>B15_vod__c</fullName>
                </value>
                <value>
                    <fullName>B16_vod__c</fullName>
                </value>
                <value>
                    <fullName>B17_vod__c</fullName>
                </value>
                <value>
                    <fullName>B18_vod__c</fullName>
                </value>
                <value>
                    <fullName>B19_vod__c</fullName>
                </value>
                <value>
                    <fullName>B20_vod__c</fullName>
                </value>
                <value>
                    <fullName>B21_vod__c</fullName>
                </value>
                <value>
                    <fullName>B22_vod__c</fullName>
                </value>
                <value>
                    <fullName>B23_vod__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Map Template Field</label>
    <nameField>
        <displayFormat>F-{000000000}</displayFormat>
        <label>Data Map Template Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Map Template Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>